# auriga-test

./: CMakeLists.txt  README.md
src/: auriga_test.h  log.c  main.c  parse_av.c
